<resources>
    <string name="app_name">ƏdvApp</string>
    <string name="msg_onboarding_page_one">Alış-veriş et və\nçekini almağı unutma!</string>
    <string name="msg_onboarding_page_two">Çekin aşağı\nhissəsindəki QR kodu\nskan et!</string>
    <string name="msg_swipe_up">Yuxarı sürüşdür!</string>
    <string name="msg_onboarding_page_three">Əlavə olunan çeklər\nhaqda qaytarılmalı\nolan ƏDV və digər\nməlumatları görüntülə!</string>
    <string name="msg_lets_get_started">Başlayaq!</string>
    <string name="title_cheques">Çeklər</string>
    <string name="title_about_app">Tətbiq haqqında</string>
    <string name="title_vat_calculator">ƏDV kalkulyator</string>
    <string name="msg_total_spending">Cəmi xərc</string>
    <string name="msg_zero_manats">0.00 ₼</string>
    <string name="msg_qr_scanner">QR skanner</string>
    <string name="msg_pick_from_gallery">Qaleriyadan seç</string>
    <string name="title_scan">Skan et</string>
    <string name="msg_to_back">Geriyə</string>
    <string name="err_camera_permission_denied">Kamera icazəsi verilmədi.</string>
    <string name="msg_want_to_add">Əlavə olunsun?</string>
    <string name="msg_enter_short_id">Fiskal İD-ni daxil et</string>
    <string name="msg_was_added">Əlavə edildi.</string>
    <string name="msg_money_amount_template">%1s ₼</string>
    <string name="placeholder_question_mark">\?</string>
    <string name="title_cheque_details">Çek detalları</string>
    <string name="msg_share">Paylaş</string>
    <string name="msg_address">Ünvan</string>
    <string name="msg_voen">VÖEN</string>
    <string name="msg_business_code">Obyektin kodu</string>
    <string name="msg_sale_cheque_number">Satış çeki №</string>
    <string name="msg_cashier">Kassir</string>
    <string name="msg_date_and_time">Tarix və saat</string>
    <string name="msg_goods">Məhsullar</string>
    <string name="msg_sum">Cəmi</string>
    <string name="msg_vat_18_percent">ƏDV 18%</string>
    <string name="msg_payment_methods">Ödəniş üsulları</string>
    <string name="msg_cashless_payment">Nağdsız ödəniş</string>
    <string name="msg_cash_payment">Nağd ödəniş</string>
    <string name="msg_bonus">Bonus</string>
    <string name="msg_credit">Kredit</string>
    <string name="msg_advance">Avans</string>
    <string name="msg_short_id">Fiskal İD</string>
    <string name="msg_cashback_not_refunded">ƏDV qaytarılması həyata keçirilməyib</string>
    <string name="msg_copy">Kopyala</string>
    <string name="msg_cashback">ƏDV-in qaytarılması</string>
    <string name="msg_short_document_id_was_copied">Fiskal İD kopyalandı</string>
    <string name="err_cheque_data_not_found">Çek məlumatları tapılmadı</string>
    <string name="msg_cashback_refunded">ƏDV qaytarılması həyata keçirilib</string>
    <string name="msg_cheque_has_already_been_added">Çek artıq əlavə edilib</string>
    <string name="msg_description">Açıqlama</string>
    <string name="msg_author">Müəllif</string>
    <string name="msg_mirkamal_qasimov">Mirkamal Qasımov</string>
    <string name="msg_version">Versiya</string>
    <string name="msg_app_version">1.0.0</string>
    <string name="msg_app_description">Tətbiq 1 nəfər tərəfindən \"side project\" olaraq hazırlanmışdır. Tətbiqin əsas məqsədi çeklərdə yerləşən QR kodu asanlıqla oxudaraq məhsullar və ƏDV haqda məlumat almaq imkanı yaratmaqdır. Məlumatlar monitoring.e-kassa.gov.az saytından əldə edilir. Əldə edilən məlumatlar istifadəçinin telefonunda qalır və heç bir formada cihazdan kənara göndərilmir!</string>
    <string name="msg_e_kassa_url">monitoring.e-kassa.gov.az</string>
    <string name="url_e_kassa">https://monitoring.e-kassa.gov.az/</string>
    <string name="title_expenses">Xərclər</string>
    <string name="title_vat">ƏDV</string>
    <string name="title_about_vat">ƏDV haqqında</string>
    <string name="action_open_in_browser">Brauzerdə aç</string>
    <string name="msg_info_about_vat">Əlavə dəyər vergisi (ƏDV) istehlak vergisinin növüdür. Bu vergi məhsula və ya materiala hər bir istehsal və çatdırma (distribusiya) mərhələsində əlavə olunan bazar dəyərinə qoyulur, və axırda istehlakçının üzərinə düşür. Bu satış vergisindən fərqlidir, çünki satış vergisi alış-veriş nöqtəsində götürülür.</string>
    <string name="url_about_vat_wiki">https://az.wikipedia.org/wiki/%C6%8Flav%C9%99_d%C9%99y%C9%99r_vergisi</string>
    <string name="msg_total_vat">Cəmi ƏDV</string>
    <string name="msg_manat_sign">₼</string>
    <string name="err_cannot_connect_to_server">Serverlə əlaqə yaradıla bilmədi</string>
    <string name="err_error">Səhv</string>
    <string name="msg_vat_to_be_refunded">Qaytarılmalı olan ƏDV</string>
    <string name="msg_method_of_payment">Ödənişin üsulu</string>
    <string name="msg_enter_short_id_instruction">Çekin aşağı hissəsində yerləşən \"Fiskal İD\"-ni daxil edin.</string>
    <string name="action_add">Əlavə et</string>
    <string name="err_short_id_must_be_twelve">Fiskal İD 12 simvoldan ibarət olmalıdır.</string>
    <string name="err_short_id_cannot_be_blank">Fiskal İD boş ola bilməz.</string>
    <string name="err_unknown_error_occurred">Serverlə əlaqə zamanı gözlənilməyən xəta baş verdi</string>
    <string name="msg_goods_and_vats">Məhsullar və ƏDV-lər</string>
    <string name="msg_statistics_of_last_week">Son həftənin statistikası</string>
    <string name="msg_your_favorite_market">Sevimli marketiniz</string>
    <string name="msg_favorite_goods">Sevimli məhsullarınız</string>
    <string name="msg_monday">Bazar ertəsi</string>
    <string name="msg_tuesday">Çərşəmbə axşamı</string>
    <string name="msg_wednesday">Çərşəmbə</string>
    <string name="msg_thursday">Cümə axşamı</string>
    <string name="msg_friday">Cümə</string>
    <string name="msg_saturday">Şənbə</string>
    <string name="msg_sunday">Bazar</string>
    <string name="msg_choose">Seçin</string>
    <string name="action_delete">Sil</string>
    <string name="action_cancel">Ləğv et</string>
    <string name="title_delete_cheque">Çekin silinməsi</string>
    <string name="msg_confirmation_delete_cheque">Çeki silmək istədiyinizdən əminsinizmi?</string>
    <string name="err_qr_code_not_found">QR kod tapılmadı.</string>
</resources>