<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/topBarAppInfo"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:src="@drawable/ic_back"
        android:tint="?colorOnSecondary"
        android:tooltipText="@string/msg_to_back"
        app:layout_constraintBottom_toBottomOf="@id/topBarAppInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/topBarAppInfo" />

    <TextView
        android:id="@+id/textViewTitleAppInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/title_about_app"
        android:textColor="?colorOnSecondary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/topBarAppInfo"
        app:layout_constraintStart_toEndOf="@id/buttonGoBack"
        app:layout_constraintTop_toTopOf="@id/topBarAppInfo" />

    <FrameLayout
        android:id="@+id/topBannerAppInfo"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/gradient_app_info"
        app:layout_constraintTop_toBottomOf="@id/topBarAppInfo">

        <TextView
            android:id="@+id/textViewAppInfoBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sf_ui_display_bold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="32sp" />

    </FrameLayout>

    <TextView
        android:id="@+id/textViewDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/msg_description"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBannerAppInfo" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/msg_app_description"
        android:textColor="?colorOnSecondary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/textViewDescriptionLabel"
        app:layout_constraintTop_toBottomOf="@id/textViewDescriptionLabel" />

    <TextView
        android:id="@+id/textViewAuthorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/msg_author"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/textViewDescription"
        app:layout_constraintTop_toBottomOf="@id/textViewDescription" />

    <TextView
        android:id="@+id/textViewAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/msg_mirkamal_qasimov"
        android:textColor="?colorOnSecondary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/textViewAuthorLabel"
        app:layout_constraintTop_toBottomOf="@id/textViewAuthorLabel" />

    <TextView
        android:id="@+id/textViewVersionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/msg_version"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/textViewAuthor"
        app:layout_constraintTop_toBottomOf="@id/textViewAuthor" />

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/msg_app_version"
        android:textColor="?colorOnSecondary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/textViewVersionLabel"
        app:layout_constraintTop_toBottomOf="@id/textViewVersionLabel" />

    <ImageButton
        android:id="@+id/imageButtonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="?selectableItemBackground"
        android:padding="4dp"
        android:src="@drawable/ic_update"
        android:tint="?colorOnSecondary"
        app:layout_constraintBottom_toBottomOf="@id/textViewVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewVersion" />

</androidx.constraintlayout.widget.ConstraintLayout>