<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/topBarVatInfo"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:src="@drawable/ic_back"
        android:tint="?colorOnSecondary"
        android:tooltipText="@string/msg_to_back"
        app:layout_constraintBottom_toBottomOf="@id/topBarVatInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/topBarVatInfo" />

    <TextView
        android:id="@+id/textViewTitleAboutVat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/title_about_vat"
        android:textColor="?colorOnSecondary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/topBarVatInfo"
        app:layout_constraintStart_toEndOf="@id/buttonGoBack"
        app:layout_constraintTop_toTopOf="@id/topBarVatInfo" />

    <ImageButton
        android:id="@+id/imageButtonOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="4dp"
        android:src="@drawable/ic_open"
        android:tint="?colorOnSecondary"
        android:tooltipText="@string/action_open_in_browser"
        app:layout_constraintBottom_toBottomOf="@id/topBarVatInfo"
        app:layout_constraintEnd_toEndOf="@id/topBarVatInfo"
        app:layout_constraintTop_toTopOf="@id/topBarVatInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>