<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/motionLayoutOnBoardingPageThree"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_onboarding_page_three_scene">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewNextOnBoardingPageThree"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85">

        <ImageView
            android:id="@+id/imageViewArrowUpOnBoardingPageThree"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_up" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textViewOnBoardingSwipeUpPageThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/msg_swipe_up"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewOnBoardingPageThree"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/boy_looking_at_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/textViewOnBoardingPageThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/msg_onboarding_page_three"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textViewPostAnimationOnBoardingPageThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:elevation="2dp"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/msg_lets_get_started"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>